Agregando pass en el modificar